--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    // compile options
+    android {
+
+
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
+
+        kotlinOptions {
+            jvmTarget = "1.8"
+        }
+    }
+
+
+
 }
 
 dependencies {
@@ -32,6 +49,14 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+
+
+    // This is the dependencies of the retrofit and gson
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+
+
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
 }
