--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,15 @@ dependencies {
     // This is the dependencies of the retrofit and gson
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    
+
+
+    // This is the dependencies of the viewModel and liveData
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-livedata:2.2.0"
+    // This is the dependency of the ktx
+    implementation "androidx.activity:activity-ktx:1.1.0"
+    //
+
 
 
 
