--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.1"
@@ -78,6 +79,9 @@ dependencies {
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+
+    //adding Picasso dependency
+    //implementation 'com.squareup.picasso:picasso:2.71828'
 
     //adding Picasso dependency
     implementation 'com.squareup.picasso:picasso:2.71828'
