--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,4 +92,6 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.0"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.0"
 
+//Material design dependency
+   implementation 'com.google.android.material:material:1.2.1'
 }
